# duplex-stream

./: .gitignore  .mcp.json  CLAUDE.md  pnpm-lock.yaml
apps/api/: package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
apps/api/src/: context.ts  index.ts
apps/api/src/middleware/: auth.ts
apps/api/src/routes/: decisions.ts  extraction.ts  workspaces.ts
apps/api/src/workflows/: extract-conversation.ts
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: auth.rs  config.rs  db.rs  lib.rs  main.rs  oauth.rs  sync.rs  token_manager.rs  watcher.rs
apps/desktop/src-tauri/src/parsers/: claude_code.rs  mod.rs
apps/web/: .dev.vars.example  app.config.ts  package.json  tsconfig.json  vite.config.ts  wrangler.jsonc
apps/web/src/: routeTree.gen.ts  router.tsx  start.ts  styles.css
apps/web/src/components/ui/: button.tsx
apps/web/src/lib/: api.ts
apps/web/src/routes/: __root.tsx  _authed.tsx  index.tsx
apps/web/src/routes/_authed/: dashboard.tsx  decisions.$id.tsx  settings.tsx
apps/web/src/routes/auth/: callback.tsx  desktop.tsx  login.tsx  logout.tsx
apps/web/src/routes/onboarding/: desktop.tsx  index.tsx
docs/: VISION.md
docs/architecture/: extraction-pipeline.md
docs/plans/: 2026-01-31-extraction-pipeline.md  2026-02-01-parallel-phases.md
scripts/: test-extraction.ts
