[package]
name = "duplex"
version = "0.1.0"
description = "Duplex Stream Desktop - Sync coding agent conversations"
authors = ["Duplex Stream"]
edition = "2021"
license = "MIT"

[lib]
name = "duplex_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[[bin]]
name = "duplex"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
keyring = "3"
url = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
json_comments = "0.2"
rusqlite = { version = "0.32", features = ["bundled"] }
notify = "8"
notify-debouncer-mini = "0.6"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
dirs = "6"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
base64 = "0.22"
rand = "0.8"
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
hyper-util = { version = "0.1", features = ["tokio"] }
urlencoding = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"

[target.'cfg(target_os = "macos")'.dependencies]
cocoa = "0.26"
objc = "0.2"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
